typescript/checker/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration9_es5.ts.stderr
error: Unexpected token Some(RBracket)
 --> $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration9_es5.ts:5:19
  |
5 |   var v = { [await]: foo }
  |                   ^

